// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-searchfield default 1`] = `
<div>
  <div>
    <div
      class="m-searchfield"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--is-tag-default"
        style="margin-top: 10px;"
        word-wrap="true"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <input
                  class="m-textfield__input"
                  id="mSearchfield-uuid"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          >
            <button
              aria-controls="mSearchfield-uuid"
              class="m-searchfield__search-button"
              title="Rechercher"
            >
              <svg
                aria-hidden="true"
                class="m-icon"
                height="22px"
                width="22px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
       
      <div
        class="m-searchfield__validation"
      >
        <div
          class="m-validation-message m-searchfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-searchfield with label 1`] = `
<div>
  <div>
    <div
      class="m-searchfield"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style m--has-label m--is-tag-default"
        style="margin-top: 10px;"
        word-wrap="true"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="mSearchfield-uuid"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  What are you look for today ?
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  class="m-textfield__input"
                  id="mSearchfield-uuid"
                />
                   
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                 
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          >
            <button
              aria-controls="mSearchfield-uuid"
              class="m-searchfield__search-button"
              title="Rechercher"
            >
              <svg
                aria-hidden="true"
                class="m-icon"
                height="22px"
                width="22px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
       
      <div
        class="m-searchfield__validation"
      >
        <div
          class="m-validation-message m-searchfield__validation__message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;
